--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body{
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
+  background-color: #ac8daf;
 }
 h1{
   margin-top: 0;
@@ -14,7 +15,7 @@ h1{
 h2{
   font-family: 'Montserrat', sans-serif;
     color: #a64942;
-    padding-bottom: 10px;
+    padding-bottom: 6px;
 }
 h3{
   font-family: 'Montserrat', sans-serif;
@@ -22,18 +23,23 @@ h3{
 }
 
 p{
-  line-height: 3;
+  line-height: 2;
+  font-size: 14px;
+  font-family: 'Raleway', sans-serif;
 }
 
-
+.profile{
+  width: 70%;
+  margin: 36px auto 100px auto;
+}
 
 .top-container{
-  background-color: #f4f9f4;
+  /* background-color: #f4f9f4; */
   position:relative;
   padding-top: 100px;
 }
 .middle-container{
-  background-color:#f4f9f4 ;
+  /* background-color:#f4f9f4 ; */
   
 
 
@@ -62,7 +68,7 @@ hr{
   border: dotted #a64942; 6px;
   border-bottom: none;
   width: 4%;
-  margin: 100px auto;
+  margin: 50px auto;
 }
 
 .kiddo{
@@ -75,23 +81,32 @@ hr{
   border-radius: 50%
 }
 .mama{
-  line-height: 3;
+  line-height: 2;
+}
+.top-skill{
+  margin-bottom: 80px;
 }
 .skill-row{
   width: 50%;
   margin: 100px auto 100px auto;
   text-align: left;
-
+}
+.firstSkill{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 50px;
+  gap: 46px;
 }
 .code-img{
-  width: 12%;
+  width: 47%;
   float: left;
   margin-right: 30px;
 }
 .chilli-img{
-  width: 25%;
+  width: 48%;
   float: right;
-  margin-left: 30px;
+  margin-left: 60px;
 
 }
 .mama{
